tests/ui_unstable/invalid_type_include_wchz.stderr
error: expected one of: `u16`, `u32`, `i16`, `i32`
 --> $DIR/invalid_type_include_wchz.rs:3:30
  |
3 | const INVALID_TYPE: &[f32] = include_wchz!(f32, "../data/basic.txt");
  |                              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the macro `include_wchz` (in Nightly builds, run with -Z macro-backtrace for more info)
