tests/ui_unstable/invalid_type_include_wchz.rs
use wchar::include_wchz;

const INVALID_TYPE: &[f32] = include_wchz!(f32, "../data/basic.txt");

fn main() {}
